--- a/.github/workflows/docker-stable.yml
+++ b/.github/workflows/docker-stable.yml
@@ -2,8 +2,8 @@ name: 稳定版
 
 on:
   push:
-    branches:
-      - 'master'
+    tags:
+      - 'v*.*.*'
 
 jobs:
   docker:
@@ -30,4 +30,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: mrlee326/nextlist_web:latest
+          tags: mrlee326/nextlist_web:latest, mrlee326/nextlist_web:${{github.ref_name}}
