--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-live-preview": "^0.4.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "@vue/runtime-dom": "latest"
   },
   "eslintConfig": {
     "root": true,
